Homepage alignment issue

--- a/web/themes/custom/miramar/css/style.css
+++ b/web/themes/custom/miramar/css/style.css
@@ -774,23 +774,26 @@ img.ad {width:100%;padding:0!important;margin:0!important;}
 .region-dates section,.region-dates .view {margin: 0 auto!important}
 .region-dates,.region-mission {
 	display:table;
-	border-spacing:5px;
+	border-spacing:0 5px;
 	width:100%;
 	margin: 0 auto;
 }
 .region-dates .block,.region-mission .block {
-	margin:0;
+	padding:0;
+	margin:0
 }
 
-.region-mission section {display:table-cell}
+.region-mission section {display:table-cell;padding:0;margin:0}
 
 .region-dates .block-views-blockimportant-dates-block-1 {
-	width:33%;
+	width:33.33%;
 }
 
 .region-dates .block-views-blockwhat-do-you-want-to-be-block-1 {
-	width:65%;
+	width:66.67%;
 	background: #a22130;
+	padding-right:0;
+	margin-right:0;
 
 }
 
@@ -802,7 +805,7 @@ img.ad {width:100%;padding:0!important;margin:0!important;}
 .region-mission #block-twitterforhomepage {
 	width:33%;
 	margin: 0 auto;
-	background:#ffffff;
+	background:inherit;
 }
 
 /*.region-mission #block-twitterforhomepage #twitter-widget-0 {height:100%!important;}*/
